# trend-rider-lib

./: .clinerules  .cursorrules  .gitignore  README.md  project.rules.md  pyproject.toml  requirements.txt  setup.py  temp_import_detail_window.py  temp_test_detail_window.py  test_incremental.py  trend_rider.sqlite  trend_rider_report.xlsx
app/: app.py  cli.py  database.py  handler.py  scan_worker.py
app/ui/: date_picker.py
app/views/: detail_window.py  results_tab.py  scan_tab.py
tests/: conftest.py  test_downloader_and_reporting.py  test_fsm.py  test_indicators.py  test_persistence_and_engine.py  test_trade_manager.py  test_trend_lifecycle_refactor.py
tests/fixtures/: delhivery_weekly_confirmation.csv
trading_view/docs/: README.md
trading_view/indicator/: trend_rider_indicator.pine
trading_view/strategy/: trend_rider_strategy.pine
trend_rider_lib/: __init__.py  api.py  backtesting.py  cli.py  design.md  engine.py
trend_rider_lib/core/: __init__.py  config.py  enums.py  models.py
trend_rider_lib/downloader/: __init__.py  yfinance_downloader.py
trend_rider_lib/indicators/: __init__.py  ema_engine.py  flag_computer.py  resampler.py
trend_rider_lib/persistence/: __init__.py  interfaces.py  scan_handler.py  sqlite_provider.py
trend_rider_lib/reporting/: __init__.py  export_utils.py
trend_rider_lib/signals/: __init__.py  signal_engine.py
trend_rider_lib/state_machine/: __init__.py  classifier.py  fsm.py  fsm_serializer.py  trend_metrics.py
trend_rider_lib/trading/: __init__.py  trade_manager.py  tsl_engine.py
