[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "trend-rider-lib"
version = "0.3.0"
description = "Stock trend analysis and trading system with state machine architecture"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Trend Rider" },
]
requires-python = ">=3.8"
keywords = ["stocks", "trading", "analysis", "state-machine", "ema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "yfinance>=0.2.28",
    "TA-Lib>=0.4.28",
    "pandas>=2.0.0",
    "transitions>=0.9.0",
    "SQLAlchemy>=2.0.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "rich>=13.0.0",
    "typer>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/nanduahmed/trend-rider-lib"
Repository = "https://github.com/nanduahmed/trend-rider-lib.git"

[project.scripts]
tr = "trend_rider_lib.cli:app"

[tool.setuptools.packages.find]
include = ["trend_rider_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]